// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormikCheckableCard render 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
  >
    <div
      class="euiRadio euiRadio--noLabel"
    >
      <input
        class="euiRadio__input"
        name="testing"
        type="radio"
      />
      <div
        class="euiRadio__circle"
      />
    </div>
  </div>
  <div
    class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
  >
    <label
      class="euiCheckableCard__label"
    />
  </div>
</div>
`;

exports[`FormikCheckableCard render formRow 1`] = `
<div
  class="euiFormRow"
  id="testing-form-row-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <div
      class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard"
    >
      <div
        class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
      >
        <div
          class="euiRadio euiRadio--noLabel"
        >
          <input
            class="euiRadio__input"
            name="testing"
            type="radio"
          />
          <div
            class="euiRadio__circle"
          />
        </div>
      </div>
      <div
        class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
      >
        <label
          class="euiCheckableCard__label"
        />
      </div>
    </div>
  </div>
</div>
`;
